--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "campgame",
-  "version": "0.1.0",
+  "version": "0.0.2",
   "description": "",
   "main": "main.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "/home/task/projects/typescript/CampGame/CampGame"
+    "url": "https://github.com/task58/CampGame"
   },
   "author": "task58",
   "license": "ISC",
