画像読み込み方法の変更
1.画像をbase64方式にコンパイルしてバンドルするよう変更。
2.1に伴い、画像を
this.textures.addBase64()で読み込む方式に変更。
3.2に伴い、プログレスバーの実装を変更。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,14 @@
         "module": "commonjs",
         "sourceMap": true,
         "noImplicitAny": false,
-        "strict": false
+        "strict": false,
+        "typeRoots": [
+            "node_modules/@types",
+            "types"
+        ]
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "types/**/*",
     ]
 }
