--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode development && webpack serve"
+    "dev": "webpack --mode development && webpack serve",
+    "build" : "webpack"
   },
   "repository": {
     "type": "git",
@@ -14,7 +15,8 @@
   "author": "task58",
   "license": "ISC",
   "dependencies": {
-    "phaser": "^3.55.2"
+    "phaser": "^3.55.2",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "expose-loader": "^1.0.3",
